# htmx-maud

./: Cargo.toml  README.md
api/: Cargo.toml  build.rs
api/assets/: app.css
api/src/: device.rs  lib.rs  main.rs
app/: Cargo.toml
app/migrations/01-add-device-table/: up.sql
app/src/: device.rs  device_rest.rs  lib.rs
