[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["macros"] }
tokio = { version = "1.33.0", features = ["full"] }
app ={ path = "../app"}
anyhow = "1.0.75"
maud = { version = "0.25.0", features = ["axum"] }
tower-http = { version = "0.4.4", features = ["fs"] }
