[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7.3"
lazy_static = "1.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rusqlite_migration = { version = "1.1.0-alpha.2", features = ["from-directory"] }
thiserror = "1.0.49"
serde = { version = "1.0.189", features = ["derive"] }
